--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
-body { font-family: sans-serif; background: #f5f5f5; padding: 2em; }
+
+body {
+  font-family: sans-serif;
+  background: #eef2f5;
+  padding: 2em;
+}
+label {
+  display: block;
+  margin: 0.5em 0;
+}
